apps/home/game/fivem-prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fivem-prod
  namespace: game
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: fivem
          volumeMounts:
            - mountPath: /config
              subPath: config
              name: fivem-data-volume
            - mountPath: /txData
              subPath: txData
              name: fivem-data-volume
          resources:
            requests:
              cpu: "1000m"
              memory: "2Gi"
            limits:
              cpu: "4000m"
              memory: "8Gi"
        - name: mariadb
          image: mariadb:10.11.18@sha256:de61fed4a40d3842f3ee09944ba52792156cfd9adf489b2cc670fc6ded28df8d
          ports:
            - containerPort: 3306
              name: mysql
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              subPath: mariadb-data
              name: fivem-data-volume
      volumes:
        - name: fivem-data-volume
          persistentVolumeClaim:
            claimName: fivem-prod-pvc
        - name: config-template
          secret:
            secretName: fivem-prod-config
