apps/home/game/fivem-prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fivem
  namespace: game
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - prod.txadmin.superkooka.com
    secretName: forge-tls
  rules:
    - host: prod.txadmin.superkooka.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fivem-prod-service
                port:
                  number: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: fivem-tcp-ingressroute
  namespace: game
spec:
  entryPoints:
    - fivem-game-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: fivem-prod-service
          port: 30120
